<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/icon_geo_dark"
        android:contentDescription="@string/txt_no_permission_title" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_permission_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_permission_subtitle"
        android:textSize="13sp"
        android:gravity="center"
        android:paddingHorizontal="16dp" />

    <Button
        android:id="@+id/btnRequestPermission"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_permission_button" />

</LinearLayout>
