<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstTimeActivity">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="@id/btn_guest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
            android:textColor="@color/white"
            app:icon="@drawable/icon_register"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="63dp"
            android:onClick="registerBtn"
            android:text="@string/register"
             />

        <com.google.android.material.button.MaterialButton
            app:iconTint="@color/black"
            app:icon="@drawable/icon_login"
            app:iconGravity="textStart"
            android:id="@+id/btn_login"
            style="@style/AppButton2"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:onClick="loginBtn"
            android:text="@string/login"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_guest"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:onClick="enterAsGuest"
        android:text="@string/guest"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="58dp"
        android:fontFamily="@font/satisfy"
        android:text="@string/welcome"
        android:textColor="?attr/colorOnSurface"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="245dp"
        android:layout_height="177dp"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/bus_welcome_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bus_start" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/water_marc"
        android:textColor="@color/lightGray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>