<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".auth.AuthRegisterFragment">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_register_desc"
            android:src="@drawable/register_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_registerUser"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/text_insert_username"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/editText_registerPassword"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_registerUser" />

        <EditText
            android:id="@+id/editText_registerConfirm"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_registerPassword" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/text_insert_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_registerConfirm" />

        <Spinner
            android:id="@+id/sp_userType"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <Button
            android:id="@+id/btn_registerConfirm"
            style="@style/AppButton2"
            android:layout_width="196dp"
            android:layout_height="68dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp" android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_userType"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>