<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon_bus_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvRouteName"
            style="@style/headingTwo"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/txtRouteName" />

        <TextView
            android:id="@+id/tvLabelVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_location" />

        <TextView
            android:id="@+id/tvEtaSeconds"
            style="@style/TextHourMinutesSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRestTime"
            android:textSize="28sp" />

    </LinearLayout>

    <CheckBox

        android:id="@+id/btnFavorite"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:background="@drawable/selector_favorite"
        android:button="@null"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
