<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.main.PlannerTripFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ll_bottom_sheet"
        style="@style/MaterialAlertDialog.Material3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="@color/purple"
        app:layout_insetEdge="top"
        app:shapeAppearanceOverlay="@style/MediumCornersBottom"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        style="@style/headingOne"
        android:textColor="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_planner" />


        <EditText
            android:drawableStart="@drawable/icon_geo_dark"
            android:id="@+id/etCurrentLocation"

            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:ems="10"
            android:hint="@string/txt_current_location"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <EditText
            android:drawableStart="@drawable/icon_target_map"
            android:id="@+id/etDestinationLocation"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp"
            android:ems="10"
            android:hint="@string/txt_destination_location"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>