<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/cardViewRoundedStyle">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/pink"
                android:src="@drawable/icon_alert_current"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImage"
                android:layout_width="60dp"
                android:layout_height="60dp">
            </com.google.android.material.imageview.ShapeableImageView>

            <LinearLayout
                android:layout_marginVertical="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvTitleNotification"
                    android:layout_marginStart="3dp"
                    style="@style/headingTwo"
                    android:textColor="@color/red"
                    android:text="@string/test_txt_titleNotif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvSubtitleNotification"
                    android:layout_marginStart="3dp"
                    style="@style/txtSubtitles"
                    android:text="@string/test_txt_subtitle_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <TextView
                android:id="@+id/tvTimeAlert"
                android:textAlignment="textEnd"
                android:textColor="@color/lightGray"
                android:text="Hace 3m"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            style="@style/txtDescription"
            android:text="@string/test_txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivReportRoute"
                    android:scaleType="centerCrop"
                    android:src="@drawable/real_plaza"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"/>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:text="Entendido"
                android:textColor="@color/white"
                android:backgroundTint="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>